# master-duel-recorder-lite

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: roadmap.md
docs/architecture/: configuration.md  overview.md  runtime-data.md
src/master_duel_recorder_lite/: __init__.py  __main__.py  config.py  runtime_paths.py
tests/: test_config.py  test_runtime_paths.py
